# app/swagger/easytex.yml
@@ -760,6 +760,32 @@ paths:
             schema:
               $ref: '#/components/schemas/SearchRequest'
       tags: [snippets]
+  /preprocessor:
+    post:
+      summary: Обработка входящего изображения
+      responses:
+        '200':
+          description: Ответ при успешной обработке
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ImagePreprocessResponse'
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+                threshold:
+                  description: Число в виде строки от 0 до 255
+                  type: string
+                apply_fft:
+                  description: True или False
+                  type: string
+      tags: [preprocessor]
   /auth/login:
     post:
       summary: Авторизация пользователя
@@ -976,6 +1002,34 @@ components:
           example: username
           x-isnullable: false
       required: [email, password, username]
+    ImagePreprocessRequest:
+      type: object
+      properties:
+        image:
+          x-isnullable: false
+          type: string
+          format: binary
+        threshold:
+          type: number
+          example: 1
+          x-isnullable: false
+        apply_fft:
+          type: boolean
+          example: flase
+          x-isnullable: false
+      required: [image, threshold, apply_fft]
+    ImagePreprocessResponse:
+      type: object
+      properties:
+        image:
+          x-isnullable: false
+          type: string
+          format: binary
+        threshold:
+          type: number
+          example: 1
+          x-isnullable: false
+      required: [image, threshold]
     UserInfo:
       type: object
       properties:
